--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
     "manifest_version": 2,
     "name": "v.redd.it Downloader",
-    "version": "1.0",
+    "version": "1.0.1",
     "author": "duskofdawn",
     "background": {
         "scripts": ["background.js"],
@@ -20,10 +20,9 @@
     },
     "permissions": [
         "downloads",
-        "tabs",
+        "activeTab",
         "declarativeContent",
-        "*://*.reddit.com/*",
-        "*://*.redd.it/*"
+        "*://*/*"
     ],
     "icons" : {
             "128": "icons/icon_128_active.png",
